@@ -18,6 +18,7 @@ A......... [ZBX-11020] fixed "host.create" so that both "inventory" and "invento
 ...G....S. [ZBX-10721] made the third parameter (<port>) of "net.tcp.service" optional (Sergejs)
 ........S. [ZBX-11012] fixed expansion of macro {DISCOVERY.RULE.NAME} (viktors)
 ..F....... [ZBX-10903] prevented parsing "data-id" values with jQuery "data" method (Cemeris)
+....I..... [ZBX-11175] fixed compilation failure for openbsd 5.8, 5.9, 6.0 (vlad)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.14
